--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-intersection-observer": "^9.4.3",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
